--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,6 +10,7 @@ spring:
       enabled: true
 
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
     properties:
