--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -69,7 +69,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
+        # password: ${{ secrets.PASSWORD }}
         source: "./docker-compose.yml"
         target: ${{ secrets.COMPOSE_PATH}}
 
