--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -69,7 +69,8 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
+        # password: ${{ secrets.PASSWORD }}
+        key: ${{ secrets.EC2_PEM_KEY }}
         source: "./docker-compose.yml"
         target: ${{ secrets.COMPOSE_PATH}}
 
@@ -84,4 +85,3 @@ jobs:
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus
             docker-compose up -d
             docker image prune -f
-
