--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -65,15 +65,15 @@ jobs:
         docker push ${{secrets.DOCKER_USERNAME}}/planus
 
     - name: compose.yml 파일 전송
-      # uses: appleboy/scp-action@master
-      uses: garygrossgarten/github-action-scp@release
+      uses: appleboy/scp-action@master
+      # uses: garygrossgarten/github-action-scp@release
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         # key: ${{ secrets.EC2_PEM_KEY }}
         source: "./docker-compose.yml"
-        target: ${{ secrets.COMPOSE_PATH}}
+        target: ${{ secrets.COMPOSE_PATH }}
 
     - name: EC2 deploy
       uses: appleboy/ssh-action@master
