--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -67,9 +67,9 @@ jobs:
     - name: compose.yml 파일 전송
       uses: appleboy/scp-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
+        host: ${{ secrets.PROD_HOST }}
+        username: ${{ secrets.PROD_USERNAME }}
+        password: ${{ secrets.PROD_PASSWORD }}
         port: 22
         source: "./docker-compose.yml"
         target: ${{ secrets.COMPOSE_PATH }}
@@ -77,9 +77,9 @@ jobs:
     - name: EC2 deploy
       uses: appleboy/ssh-action@master
       with:
-        host: ${{secrets.HOST}}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
+        host: ${{secrets.PROD_HOST}}
+        username: ${{ secrets.PROD_USERNAME }}
+        password: ${{ secrets.PROD_PASSWORD }}
         script: |
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus
