--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -65,7 +65,7 @@ jobs:
         docker push ${{secrets.DOCKER_USERNAME}}/planus
 
     - name: compose.yml 파일 전송
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v0.1.7
       with:
         host: ${{ secrets.PROD_HOST }}
         username: ${{ secrets.PROD_USERNAME }}
