--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -69,8 +69,8 @@ jobs:
       with:
         host: ${{ secrets.PROD_HOST }}
         username: ${{ secrets.PROD_USERNAME }}
-        password: ${{ secrets.PROD_PASSWORD }}
-        port: 22
+        # password: ${{ secrets.PROD_PASSWORD }}
+        key: ${{ secrets.PROD_PEM_KEY }}
         source: "./docker-compose.yml"
         target: "/home/ubuntu/"
         # target: ${{ secrets.PROD_COMPOSE_PATH }}
