--- a/.github/workflows/planus-cd.yml
+++ b/.github/workflows/planus-cd.yml
@@ -72,15 +72,15 @@ jobs:
         # password: ${{ secrets.PROD_PASSWORD }}
         key: ${{ secrets.PROD_PEM_KEY }}
         source: "./docker-compose.yml"
-        target: "/home/ubuntu/"
-        # target: ${{ secrets.PROD_COMPOSE_PATH }}
+        target: ${{ secrets.COMPOSE_PATH }}
 
     - name: EC2 deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{secrets.PROD_HOST}}
         username: ${{ secrets.PROD_USERNAME }}
-        password: ${{ secrets.PROD_PASSWORD }}
+        # password: ${{ secrets.PROD_PASSWORD }}
+        key: ${{ secrets.PROD_PEM_KEY }}
         script: |
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus
