--- a/docker-compose/docker-compose.prod.yml
+++ b/docker-compose/docker-compose.prod.yml
@@ -2,11 +2,11 @@ version: '3'
 
 services:
   app:
-    image: sanggenie/planus
-    container_name: planus
-    build:
-      context: ./
-      dockerfile: Dockerfile
+    image: sanggenie/planus_prod
+    container_name: planus_prod
+#    build:
+#      context: ./
+#      dockerfile: ./DockerFile/Dockerfile_prod
     restart: always
     ports:
       - 8080:8080
