[Feat] product 브랜치 추가

--- a/.github/workflows/planus-ci.yml
+++ b/.github/workflows/planus-ci.yml
@@ -9,7 +9,7 @@ name: Planus CI
 
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "develop", "product" ]
 
 permissions:
   contents: read
