--- a/.github/workflows/planus-cd-prod.yml
+++ b/.github/workflows/planus-cd-prod.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Planus CD
+가name: Planus Product Server CD
 
 on:
   push:
@@ -61,8 +61,8 @@ jobs:
     - name: Dokcer 이미지 빌드
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD}}
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/planus .
-        docker push ${{secrets.DOCKER_USERNAME}}/planus
+        docker build -f DockerFile/Dockerfile_prod -t ${{ secrets.DOCKER_USERNAME }}/planus_prod .
+        docker push ${{secrets.DOCKER_USERNAME}}/planus_prod
 
     - name: compose.yml 파일 전송
       uses: appleboy/scp-action@v0.1.7
@@ -71,8 +71,8 @@ jobs:
         username: ${{ secrets.PROD_USERNAME }}
         # password: ${{ secrets.PROD_PASSWORD }}
         key: ${{ secrets.PROD_PEM_KEY }}
-        source: "./docker-compose.yml"
-        target: ${{ secrets.COMPOSE_PATH }}
+        source: "./docker-compose/docker-compose.prod.yml"
+        target: ${{ secrets.COMPOSE_PATH }}/docker-compose.yml
 
     - name: EC2 deploy
       uses: appleboy/ssh-action@master
@@ -83,6 +83,6 @@ jobs:
         key: ${{ secrets.PROD_PEM_KEY }}
         script: |
             sudo docker rm -f $(docker ps -qa)
-            sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus
+            sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus_prod
             docker-compose up -d
             docker image prune -f
