--- a/.github/workflows/planus-cd-dev.yml
+++ b/.github/workflows/planus-cd-dev.yml
@@ -80,7 +80,9 @@ jobs:
           username: ${{ secrets.DEV_USERNAME }}
           key: ${{ secrets.DEV_PEM_KEY }}
           script: |
-            echo ls
+            cp ./docker-compose/docker-compose.dev.yml ./docker-compose.yml
+            rm ./docker-compose/docker-compose.dev.yml
+            
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus_dev
             docker-compose -f docker-compose/docker-compose.dev.yml up -d
