--- a/.github/workflows/planus-cd-prod.yml
+++ b/.github/workflows/planus-cd-prod.yml
@@ -83,6 +83,6 @@ jobs:
         script: |
           cp ./docker-compose/docker-compose.prod.yml ./docker-compose.yml
           sudo docker rm -f $(docker ps -qa)
-          sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus_dev
+          sudo docker pull ${{secrets.DOCKER_USERNAME}}/planus_prod
           docker-compose up -d
           docker image prune -f
